--- a/public/documentation.html
+++ b/public/documentation.html
@@ -22,47 +22,152 @@
             <td>Return a list of all movies</td>
             <td>None</td>
             <td>None</td>
-            <td>Array of movie objects</td>
+            <td>
+                <pre>
+[
+    {
+        "title": "string",
+        "description": "string",
+        "genre": {
+            "name": "string",
+            "description": "string"
+        },
+        "director": {
+            "name": "string",
+            "bio": "string",
+            "birthYear": 0
+        },
+        "imageURL": "string",
+        "featured": true
+    }
+]
+                </pre>
+            </td>
         </tr>
         <tr>
             <td>GET</td>
-            <td>/movies/:title</td>
-            <td>Return data about a single movie by title</td>
-            <td>title (String)</td>
+            <td>/movies/:id</td>
+            <td>Return data about a single movie by ID</td>
+            <td>id (String)</td>
             <td>None</td>
-            <td>Movie object</td>
+            <td>
+                <pre>
+{
+    "title": "string",
+    "description": "string",
+    "genre": {
+        "name": "string",
+        "description": "string"
+    },
+    "director": {
+        "name": "string",
+        "bio": "string",
+        "birthYear": 0
+    },
+    "imageURL": "string",
+    "featured": true
+}
+                </pre>
+            </td>
         </tr>
         <tr>
-            <td>GET</td>
-            <td>/genres/:name</td>
-            <td>Return data about a genre by name</td>
-            <td>name (String)</td>
+            <td>POST</td>
+            <td>/movies</td>
+            <td>Create a new movie</td>
             <td>None</td>
-            <td>Genre object</td>
-        </tr>
-        <tr>
-            <td>GET</td>
-            <td>/directors/:name</td>
-            <td>Return data about a director by name</td>
-            <td>name (String)</td>
-            <td>None</td>
-            <td>Director object</td>
+            <td>
+                <pre>
+{
+    "title": "string",
+    "description": "string",
+    "genre": {
+        "name": "string",
+        "description": "string"
+    },
+    "director": {
+        "name": "string",
+        "bio": "string",
+        "birthYear": 0
+    },
+    "imageURL": "string",
+    "featured": true
+}
+                </pre>
+            </td>
+            <td>
+                <pre>
+{
+    "message": "Movie created successfully",
+    "movie": {
+        "title": "string",
+        "description": "string",
+        "genre": {
+            "name": "string",
+            "description": "string"
+        },
+        "director": {
+            "name": "string",
+            "bio": "string",
+            "birthYear": 0
+        },
+        "imageURL": "string",
+        "featured": true
+    }
+}
+                </pre>
+            </td>
         </tr>
         <tr>
             <td>POST</td>
             <td>/users</td>
             <td>Allow new users to register</td>
             <td>None</td>
-            <td>{ "username": "user", "password": "pass", "email": "user@example.com", "birthday": "YYYY-MM-DD" }</td>
-            <td>Message confirming registration</td>
+            <td>
+                <pre>
+{
+    "username": "user",
+    "password": "pass",
+    "email": "user@example.com",
+    "birthday": "YYYY-MM-DD"
+}
+                </pre>
+            </td>
+            <td>
+                <pre>
+{
+    "message": "User registered successfully",
+    "user": {
+        "username": "user",
+        "email": "user@example.com",
+        "birthday": "YYYY-MM-DD",
+        "favoriteMovies": []
+    }
+}
+                </pre>
+            </td>
         </tr>
         <tr>
             <td>PUT</td>
             <td>/users/:username</td>
             <td>Allow users to update their user info</td>
             <td>username (String)</td>
-            <td>{ "username": "newUser", "password": "newPass", "email": "new@example.com", "birthday": "YYYY-MM-DD" }</td>
-            <td>Message confirming update</td>
+            <td>
+                <pre>
+{
+    "username": "newUser",
+    "password": "newPass",
+    "email": "new@example.com",
+    "birthday": "YYYY-MM-DD"
+}
+                </pre>
+            </td>
+            <td>
+                <pre>
+{
+    "message": "User info updated successfully"
+}
+                </pre>
+            </td>
         </tr>
         <tr>
             <td>POST</td>
@@ -70,7 +175,13 @@
             <td>Allow users to add a movie to their list of favorites</td>
             <td>username (String), movieID (String)</td>
             <td>None</td>
-            <td>Message confirming addition</td>
+            <td>
+                <pre>
+{
+    "message": "Movie added to favorites successfully"
+}
+                </pre>
+            </td>
         </tr>
         <tr>
             <td>DELETE</td>
@@ -78,7 +189,13 @@
             <td>Allow users to remove a movie from their list of favorites</td>
             <td>username (String), movieID (String)</td>
             <td>None</td>
-            <td>Message confirming removal</td>
+            <td>
+                <pre>
+{
+    "message": "Movie removed from favorites successfully"
+}
+                </pre>
+            </td>
         </tr>
         <tr>
             <td>DELETE</td>
@@ -86,7 +203,13 @@
             <td>Allow existing users to deregister</td>
             <td>username (String)</td>
             <td>None</td>
-            <td>Message confirming deregistration</td>
+            <td>
+                <pre>
+{
+    "message": "User deregistered successfully"
+}
+                </pre>
+            </td>
         </tr>
     </table>
 </body>
